--- a/application/layouts/scripts/menuleft.phtml
+++ b/application/layouts/scripts/menuleft.phtml
@@ -8,6 +8,11 @@
 			'home'=>array(
 						
 			),
+			'room'=>array(
+				'index'=>'<li><a href="">'.$tr->translate("ROOM_TYPE").'</a></li>',
+			    'floor'=>'<li><a href="">'.$tr->translate("FLOOR").'</a></li>',
+				'room'=>'<li><a href="">'.$tr->translate("ROOM").'</a></li>',
+			),
 			'registrar'=>array(
 			    'index'=>'<li><a href="">'.$tr->translate("Receipt").'</a></li>',
 			    'register'=>'<li><a href="">'.$tr->translate("Receipt").'</a></li>',
