--- a/application/layouts/scripts/menuleft.phtml
+++ b/application/layouts/scripts/menuleft.phtml
@@ -13,6 +13,12 @@
 			    'floor'=>'<li><a href="">'.$tr->translate("FLOOR").'</a></li>',
 				'room'=>'<li><a href="">'.$tr->translate("ROOM").'</a></li>',
 			),
+				'product'=>array(
+						'index'=>'<li><a href="">'.$tr->translate("PRODUCT").'</a></li>',
+						'brand'=>'<li><a href="">'.$tr->translate("BRAND").'</a></li>',
+						'category'=>'<li><a href="">'.$tr->translate("CATEGORY").'</a></li>',
+						'measure'=>'<li><a href="">'.$tr->translate("MEASURE").'</a></li>',
+				),
 			'registrar'=>array(
 			    'index'=>'<li><a href="">'.$tr->translate("Receipt").'</a></li>',
 			    'register'=>'<li><a href="">'.$tr->translate("Receipt").'</a></li>',
