--- a/application/modules/product/views/scripts/index/edit.phtml
+++ b/application/modules/product/views/scripts/index/edit.phtml
@@ -14,7 +14,7 @@
 select{ width:100%;}
 fieldset{  background:none;}
 </style>
-<form id='receipt' action="<?php echo $this->url(array('module'=>'product','controller'=>'index','action'=>'add')); ?>" dojoType="dijit.form.Form" method="post" enctype="application/x-www-form-urlencoded">
+<form id='receipt' action="<?php echo $this->url(array('module'=>'product','controller'=>'index','action'=>'edit')); ?>" dojoType="dijit.form.Form" method="post" enctype="application/x-www-form-urlencoded">
 <table  cellspacing="10" style="margin: 0 auto; width: 100%;" >
 	<tr>
 		<td>
