--- a/application/layouts/scripts/menuleft.phtml
+++ b/application/layouts/scripts/menuleft.phtml
@@ -13,6 +13,10 @@
 			    'floor'=>'<li><a href="">'.$tr->translate("FLOOR").'</a></li>',
 				'room'=>'<li><a href="">'.$tr->translate("ROOM").'</a></li>',
 			),
+			'booking'=>array(
+				'index'=>'<li><a href="">'.$tr->translate("Booking").'</a></li>',
+			    'room'=>'<li><a href="">'.$tr->translate("Detiale").'</a></li>',
+			),
 				'product'=>array(
 						'index'=>'<li><a href="">'.$tr->translate("PRODUCT").'</a></li>',
 						'brand'=>'<li><a href="">'.$tr->translate("BRAND").'</a></li>',
